[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/LabeledProgressBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/SkillsUI/SkillOverviewPanel.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 0.501961 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Gradient" id=1]
resource_local_to_scene = true
colors = PoolColorArray( 0.172549, 0.345098, 0.545098, 1, 0.172549, 0.345098, 0.545098, 1 )

[node name="SkillOverviewPanel" type="PanelContainer"]
margin_right = 1280.0
margin_bottom = 126.0
mouse_filter = 1
custom_styles/panel = SubResource( 4 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 1278.0
margin_bottom = 124.0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_right = 1266.0
margin_bottom = 14.0
text = "Skill name"

[node name="DescLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 38.0
margin_right = 1266.0
margin_bottom = 52.0
text = "Description"

[node name="LearnedPerksLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 20.0
margin_right = 1266.0
margin_bottom = 34.0
text = "Learned perks: 0/10"

[node name="FreePerksLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 20.0
margin_right = 1266.0
margin_bottom = 34.0
text = "Free perk points: 0"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1276.0
margin_bottom = 122.0
size_flags_vertical = 3

[node name="LevelBar" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1106.0
margin_bottom = 122.0
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )
colorGradient = SubResource( 1 )

[node name="PerksButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1110.0
margin_right = 1276.0
margin_bottom = 122.0
rect_min_size = Vector2( 70, 40 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15
text = "Perks"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/PerksButton" to="." method="_on_PerksButton_pressed"]
